safemlx-sys/src/mlx-c/mlx/c/event.h

// Selected original operation companion. All statuses are ScopedEvaluation;
// no textual error channel or replacement failure owner is used.
typedef struct mlx_operation_event_ { void* ctx; } mlx_operation_event;
unsigned mlx_operation_event_new(mlx_operation_event*, mlx_submission_observer);
// Pure requested storage facts, not an arena-fit or admission certificate.
// On invalid/overflow input returns false without changing *out.
typedef struct mlx_operation_root_storage_layout_ {
  size_t root_count;
  size_t object_bytes;
  size_t object_alignment;
  size_t object_graph_extent;
  size_t roots_bytes;
  size_t roots_alignment;
  size_t roots_graph_extent;
  size_t graph_blocks;
  size_t graph_request_extent;
} mlx_operation_root_storage_layout;
// Pure qualified fixed Record recipe. An eventless completion allocates none;
// host polling allocates none. Counts are supplied by an admitted caller bank.
// Unknown qualification/overflow returns false without writing out. This is not
// an arena-fit certificate and excludes Graph/backend wait dispatch owners.
typedef struct mlx_operation_wait_record_layout_ {
  size_t wait_count;
  size_t object_bytes;
  size_t object_alignment;
  size_t capture_slots;
  size_t capture_bytes;
  size_t capture_alignment;
  size_t stream_receipts;
  size_t stream_bytes;
  size_t stream_alignment;
  size_t allocations_per_wait;
  size_t requested_bytes_per_wait;
  size_t total_record_allocations;
  size_t total_record_requested_bytes;
  size_t named_control_bytes;
} mlx_operation_wait_record_layout;
bool mlx_operation_event_wait_record_layout(
    mlx_operation_wait_record_layout* out, size_t wait_count);
// Pure qualified selected-Eval reservation slice. Positive T/S/O describes
// actual tape/stream/output populations; this is not a cold admission proof.
// Unknown qualification, invalid shape or overflow leaves *out unchanged.
typedef struct mlx_operation_eval_record_layout_ {
  size_t tape_entries;
  size_t stream_count;
  size_t output_slots;
  size_t object_bytes;
  size_t object_alignment;
  size_t capture_slots;
  size_t capture_bytes;
  size_t capture_alignment;
  size_t stream_state_bytes;
  size_t stream_state_alignment;
  size_t stream_receipt_bytes;
  size_t stream_receipt_alignment;
  size_t primitive_owner_bytes;
  size_t primitive_owner_alignment;
  size_t output_pin_bytes;
  size_t output_pin_alignment;
  size_t record_allocations;
  size_t record_requested_bytes;
  size_t named_control_bytes;
  // Fixed Synchronizer/descriptor/Event Graph owner recipe, separate from Record.
  size_t host_graph_request_bytes[4];
  size_t host_graph_request_alignments[4];
  size_t host_graph_blocks;
  size_t host_graph_header_bytes;
  size_t host_graph_header_alignment;
  size_t host_graph_slots_bytes;
  size_t host_graph_slots_alignment;
  size_t host_graph_reserved_alignment;
  size_t host_graph_requested_bytes;
  size_t host_graph_allocation_extents;
  size_t host_graph_event_controls;
  size_t host_graph_platform_events;
} mlx_operation_eval_record_layout;
bool mlx_operation_event_eval_record_layout(
    mlx_operation_eval_record_layout* out,
    size_t tape_entries, size_t streams, size_t output_slots);
// A finite prepared Record destination, including the selected Synchronizer.
// These counts confer no source authenticity, submission authority or Graph fit.
typedef struct mlx_operation_eval_traversal_limits_ {
  size_t root_count;
  size_t array_nodes;
  size_t tape_entries;
  size_t input_edges;
  size_t output_slots;
  size_t stream_count;
  size_t capture_slots;
} mlx_operation_eval_traversal_limits;
typedef struct mlx_operation_eval_traversal_layout_ {
  mlx_operation_eval_traversal_limits limits;
  size_t request_bytes[11];
  size_t request_alignments[11];
  size_t record_allocations;
  size_t record_requested_bytes;
  size_t named_control_bytes;
} mlx_operation_eval_traversal_layout;
// Qualification/invalid/overflow leaves out unchanged.
bool mlx_operation_event_eval_traversal_layout(
    mlx_operation_eval_traversal_layout* out,
    const mlx_operation_eval_traversal_limits* limits);
// Exact current original context; refuses active tracing/export/retained graphs.
unsigned mlx_operation_event_validate_traversal_context(mlx_submission_observer);
// Read only graph-membership checks plus the existing completed-event detach.
// Rejects lazy/traced/non-leaf input before any new graph work or allocation.
unsigned mlx_operation_event_validate_traversal_leaf(mlx_submission_observer, mlx_array);
// Reuses the same authenticated selected evaluator. All finite Record buffers
// precede traversal; capacity refusal never falls back to growing containers.
unsigned mlx_operation_event_submit_on_stream_prepared(
    mlx_operation_event, mlx_stream, const mlx_operation_eval_traversal_limits*);
bool mlx_operation_event_root_storage_layout(
    mlx_operation_root_storage_layout* out, size_t root_count);
// Validate owner, selected stream and count before native allocation. A reserve
// failure may return a NONNULL owning *out: caller must free/defer that wrapper
// even when status != 0. Never overwrite or refill an existing output.
unsigned mlx_operation_event_new_exact(
    mlx_operation_event* out, mlx_submission_observer observer,
    mlx_stream selected_stream, size_t root_count);
unsigned mlx_operation_event_append(mlx_operation_event, mlx_array);
unsigned mlx_operation_event_submit(mlx_operation_event);
// Explicit selected-stream frontier; empty/evaluated roots still submit it.
unsigned mlx_operation_event_submit_on_stream(mlx_operation_event, mlx_stream);
unsigned mlx_operation_event_query(mlx_operation_event);
unsigned mlx_operation_event_wait(mlx_operation_event);
unsigned mlx_operation_event_wait_stream(mlx_operation_event, mlx_stream);
// Guarded destruction, or allocation-free deferral when that guard is busy.
void mlx_operation_event_free(mlx_operation_event);
void mlx_operation_event_defer(mlx_operation_event);
unsigned mlx_operation_event_retire_deferred(mlx_submission_observer);
size_t mlx_operation_event_control_bytes(void);