safemlx-sys/src/bindings.rs


#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_submission_native_control_layout_ {
    pub event_object_bytes: usize,
    pub event_shared_bytes: usize,
    pub event_shared_alignment: usize,
    pub event_graph_extent: usize,
    pub event_platform_objects: usize,
    pub task_header_bytes: usize,
    pub task_header_alignment: usize,
    pub fixed_controls: usize,
}
pub type mlx_submission_native_control_layout = mlx_submission_native_control_layout_;
unsafe extern "C" {
    pub fn mlx_submission_scope_enable_original_controls(
        scope: mlx_submission_scope,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_submission_native_control_layout_for(
        out: *mut mlx_submission_native_control_layout,
    ) -> ::std::os::raw::c_uint;
}

unsafe extern "C" {
    pub fn mlx_submission_scope_require_original_controls(
        scope: mlx_submission_scope,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_prefill_failure_bind_original_scope(
        failure: mlx_prefill_failure,
        scope: mlx_submission_scope,
    ) -> ::std::os::raw::c_uint;
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_submission_runtime_baseline_ {
    pub selected_streams: usize,
    pub cpu_workers: usize,
    pub scheduler_object_bytes: usize,
    pub worker_object_bytes: usize,
    pub event_runtime_object_bytes: usize,
    pub native_threads: usize,
    pub unpriced_populations: usize,
}
pub type mlx_submission_runtime_baseline = mlx_submission_runtime_baseline_;
unsafe extern "C" {
    pub fn mlx_submission_runtime_preparation_allowed() -> bool;
    pub fn mlx_submission_prepare_runtime(
        out: *mut mlx_submission_runtime_baseline,
        operation: mlx_stream,
        weights: mlx_stream,
    ) -> ::std::os::raw::c_uint;
}

unsafe extern "C" {
    pub fn mlx_array_eval_scoped(
        value: mlx_array,
        error: *mut mlx_prefill_failure,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_array_eval_scoped_failure(error: *mut mlx_prefill_failure)
    -> ::std::os::raw::c_uint;
    pub fn mlx_array_eval_scoped_control_bytes() -> usize;
    pub fn mlx_array_deep_copy_scoped(
        out: *mut mlx_array,
        source: mlx_array,
        error: *mut mlx_prefill_failure,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_array_deep_copy_scoped_control_bytes(maximum_rank: usize) -> usize;
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_submission_observer {
    pub ctx: *mut ::std::os::raw::c_void,
}
unsafe extern "C" {
    pub fn mlx_submission_observer_current(
        out: *mut mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_submission_observer_retain(value: mlx_submission_observer)
    -> ::std::os::raw::c_uint;
    pub fn mlx_submission_observer_release(value: mlx_submission_observer);
    pub fn mlx_submission_observer_validate_array(
        value: mlx_submission_observer,
        array: mlx_array,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_submission_observer_query(
        out: *mut mlx_submission_status,
        value: mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_submission_observer_progress(
        out: *mut mlx_submission_status,
        value: mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_submission_observer_retire(value: mlx_submission_observer)
    -> ::std::os::raw::c_uint;
    pub fn mlx_submission_observer_failure(
        out: *mut mlx_prefill_failure,
        value: mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_operation_event {
    pub ctx: *mut ::std::os::raw::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Default, PartialEq, Eq)]
pub struct mlx_operation_root_storage_layout {
    pub root_count: usize,
    pub object_bytes: usize,
    pub object_alignment: usize,
    pub object_graph_extent: usize,
    pub roots_bytes: usize,
    pub roots_alignment: usize,
    pub roots_graph_extent: usize,
    pub graph_blocks: usize,
    pub graph_request_extent: usize,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct mlx_operation_eval_traversal_limits {
    pub root_count: usize,
    pub array_nodes: usize,
    pub tape_entries: usize,
    pub input_edges: usize,
    pub output_slots: usize,
    pub stream_count: usize,
    pub capture_slots: usize,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct mlx_operation_eval_traversal_layout {
    pub limits: mlx_operation_eval_traversal_limits,
    pub request_bytes: [usize; 11usize],
    pub request_alignments: [usize; 11usize],
    pub record_allocations: usize,
    pub record_requested_bytes: usize,
    pub named_control_bytes: usize,
}
extern "C" {
    pub fn mlx_operation_event_validate_traversal_context(
        observer: mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_validate_traversal_leaf(
        observer: mlx_submission_observer,
        input: mlx_array,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_eval_traversal_layout(
        out: *mut mlx_operation_eval_traversal_layout,
        limits: *const mlx_operation_eval_traversal_limits,
    ) -> bool;
    pub fn mlx_operation_event_submit_on_stream_prepared(
        event: mlx_operation_event,
        stream: mlx_stream,
        limits: *const mlx_operation_eval_traversal_limits,
    ) -> ::std::os::raw::c_uint;
}

#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct mlx_operation_eval_record_layout {
    pub tape_entries: usize,
    pub stream_count: usize,
    pub output_slots: usize,
    pub object_bytes: usize,
    pub object_alignment: usize,
    pub capture_slots: usize,
    pub capture_bytes: usize,
    pub capture_alignment: usize,
    pub stream_state_bytes: usize,
    pub stream_state_alignment: usize,
    pub stream_receipt_bytes: usize,
    pub stream_receipt_alignment: usize,
    pub primitive_owner_bytes: usize,
    pub primitive_owner_alignment: usize,
    pub output_pin_bytes: usize,
    pub output_pin_alignment: usize,
    pub record_allocations: usize,
    pub record_requested_bytes: usize,
    pub named_control_bytes: usize,
    pub host_graph_request_bytes: [usize; 4],
    pub host_graph_request_alignments: [usize; 4],
    pub host_graph_blocks: usize,
    pub host_graph_header_bytes: usize,
    pub host_graph_header_alignment: usize,
    pub host_graph_slots_bytes: usize,
    pub host_graph_slots_alignment: usize,
    pub host_graph_reserved_alignment: usize,
    pub host_graph_requested_bytes: usize,
    pub host_graph_allocation_extents: usize,
    pub host_graph_event_controls: usize,
    pub host_graph_platform_events: usize,
}
extern "C" {
    pub fn mlx_operation_event_eval_record_layout(
        out: *mut mlx_operation_eval_record_layout,
        tape_entries: usize,
        streams: usize,
        output_slots: usize,
    ) -> bool;
}

#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct mlx_operation_wait_record_layout {
    pub wait_count: usize,
    pub object_bytes: usize,
    pub object_alignment: usize,
    pub capture_slots: usize,
    pub capture_bytes: usize,
    pub capture_alignment: usize,
    pub stream_receipts: usize,
    pub stream_bytes: usize,
    pub stream_alignment: usize,
    pub allocations_per_wait: usize,
    pub requested_bytes_per_wait: usize,
    pub total_record_allocations: usize,
    pub total_record_requested_bytes: usize,
    pub named_control_bytes: usize,
}
unsafe extern "C" {
    pub fn mlx_operation_event_wait_record_layout(
        out: *mut mlx_operation_wait_record_layout,
        wait_count: usize,
    ) -> bool;
}
unsafe extern "C" {
    pub fn mlx_operation_event_new(
        out: *mut mlx_operation_event,
        observer: mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_root_storage_layout(
        out: *mut mlx_operation_root_storage_layout,
        root_count: usize,
    ) -> bool;
    pub fn mlx_operation_event_new_exact(
        out: *mut mlx_operation_event,
        observer: mlx_submission_observer,
        selected_stream: mlx_stream,
        root_count: usize,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_append(
        event: mlx_operation_event,
        value: mlx_array,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_submit(event: mlx_operation_event) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_submit_on_stream(
        event: mlx_operation_event,
        stream: mlx_stream,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_query(event: mlx_operation_event) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_wait(event: mlx_operation_event) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_wait_stream(
        event: mlx_operation_event,
        stream: mlx_stream,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_free(event: mlx_operation_event);
    pub fn mlx_operation_event_defer(event: mlx_operation_event);
    pub fn mlx_operation_event_retire_deferred(
        observer: mlx_submission_observer,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_operation_event_control_bytes() -> usize;
    pub fn mlx_copy_from_host_operation(
        out: *mut mlx_array,
        event: mlx_operation_event,
        source: mlx_host_transfer_buffer,
        stream: mlx_stream,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_copy_to_host_operation(
        out: *mut mlx_host_transfer_buffer,
        event: mlx_operation_event,
        source: mlx_array,
        policy: mlx_host_transfer_policy,
        stream: mlx_stream,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_copy_to_prepared_host_operation(
        out: *mut mlx_array,
        event: mlx_operation_event,
        source: mlx_array,
        prepared_destination: *mut ::std::os::raw::c_void,
        stream: mlx_stream,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_host_transfer_buffer_defer_original(buffer: mlx_host_transfer_buffer);
    pub fn mlx_submission_observer_control_bytes() -> usize;
    pub fn mlx_operation_host_transfer_control_bytes() -> usize;
}

pub const MLX_OWNED_HOST_COPY_STRATEGY: u32 = 1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_owned_host_copy_layout {
    pub metadata_bytes: usize,
    pub backing_bytes: usize,
    pub copy_bytes: usize,
    pub handle_bytes: usize,
    pub handle_alignment: usize,
    pub controls: usize,
    pub strategy: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mlx_owned_host_copy_slot {
    pub ctx: *mut ::std::os::raw::c_void,
}
unsafe extern "C" {
    pub fn mlx_owned_host_copy_layout_for(
        out: *mut mlx_owned_host_copy_layout,
        runtime: mlx_prepared_input_runtime,
        shape: *const ::std::os::raw::c_int,
        rank: usize,
        dtype: mlx_dtype,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_owned_host_copy_new(
        out: *mut mlx_owned_host_copy_slot,
        runtime: mlx_prepared_input_runtime,
        arena: mlx_submission_graph_quota,
        shape: *const ::std::os::raw::c_int,
        rank: usize,
        dtype: mlx_dtype,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_owned_host_copy_free(slot: mlx_owned_host_copy_slot);
    pub fn mlx_owned_host_copy_fill_completed(
        out: *mut mlx_array,
        birth: *mut mlx_original_buffer_info,
        slot: mlx_owned_host_copy_slot,
        observer: mlx_submission_observer,
        data: *const ::std::os::raw::c_void,
        bytes: usize,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_owned_host_copy_fill(
        out: *mut mlx_array,
        slot: mlx_owned_host_copy_slot,
        observer: mlx_submission_observer,
        data: *const ::std::os::raw::c_void,
        bytes: usize,
    ) -> ::std::os::raw::c_uint;
    pub fn mlx_owned_host_copy_state(slot: mlx_owned_host_copy_slot) -> ::std::os::raw::c_uint;
}
